# node-rust-tsp

./: .gitignore  Cargo.toml  LICENSE  README.md
node-rest-tsp/: README.md  app.js  package.json  response.js
node-rest-tsp/controllers/: compute.js  root.js
node-rest-tsp/model/: compute.js
node-rest-tsp/schemas/: compute-api-schema-input.json  compute-api-schema-output.json  result-api-schema-output.json  root-api-schema-output.json
node-rest-tsp/test/: compute-api-test.js  root-api-test.js
src/: city.rs  dbio.rs  graph.rs  lib.rs  main.rs  population.rs  tests.rs  tour.rs  tsp.rs
src/libtsp/: city.rs  mod.rs  population.rs  tour.rs  tsp.rs
src/node/: package.json
src/node/src/: app.js  response.js
src/node/src/controllers/: compute.js
src/node/src/model/: compute.js
src/node/src/schemas/: compute-api-schema-input.json  compute-api-schema-output.json  result-api-schema-output.json  root-api-schema-output.json
src/node/test/: compute-api-test.js  root-api-test.js
src/rust/src/: lib.rs
src/rust/src/libtsp/: graph.rs  tour.rs
src/rust/tests/: lib.rs
src/rusttsp/: city.rs  graph.rs  mod.rs  population.rs  tests.rs  tour.rs  tsp.rs
