[package]
name = "rust_tsp"
version = "0.1.0"
authors = ["joaohrpereira <joaohrpereira@gmail.com>"]
license = ""
readme = "README.md"
keywords = ["genetic","algorithm"]
repository = "https://github.com/JoaoHenriquePereira/rust-tsp"
homepage = "https://github.com/JoaoHenriquePereira/rust-tsp"
description = """
A genetic algorithm implementation in Rust.
"""

[lib]
name = "rust_tsp"
crate-type = ["dylib"]

[dependencies]

libc				= "*"
rand 				= "*"
rustc-serialize 	= "*"

