[package]
name = "rusttsp"
version = "0.1.1"
authors = ["joaohrpereira <joaohrpereira@gmail.com>"]
license = ""
readme = "README.md"
keywords = ["genetic", "algorithm", "node", "rust"]
repository = "https://github.com/JoaoHenriquePereira/rust-tsp"
homepage = "https://github.com/JoaoHenriquePereira/rust-tsp"
description = """
A genetic algorithm implementation in Rust.
"""

[lib]
name = "rusttsp"
crate-type = ["rlib", "dylib"]

[dependencies]

libc			= "*"
rand 			= "*"
rustc-serialize = "*"

